--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "2.36.0",
     "@tanstack/react-query": "4.36.1",
     "axios": "^1.5.1",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.16.0",
