--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mantine/core": "6.0.19",
+    "@mantine/dates": "6.0.19",
     "@mantine/form": "6.0.19",
     "@mantine/hooks": "6.0.19",
     "@mantine/notifications": "6.0.19",
