--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@mantine/form": "6.0.19",
     "@mantine/hooks": "6.0.19",
     "@mantine/notifications": "6.0.19",
+    "@mantine/tiptap": "6.0.19",
     "@tabler/icons-react": "2.36.0",
     "@tanstack/react-query": "4.36.1",
+    "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.5.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
