--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.13",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
